unpackaged/main/default/objects/ProductAttribute/fields/Clothing_Colors__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Colors__c</fullName>
    <label>Clothing Colors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>