unpackaged/main/default/objects/ProductAttribute/fields/Clothing_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Sizes__c</fullName>
    <label>Clothing Sizes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>