unpackaged/main/default/objects/ProductAttribute/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <label>Controller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Single Controller</fullName>
            </value>
            <value>
                <fullName>Dual Controller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>