unpackaged/main/default/objects/ProductAttribute/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/2 in</fullName>
            </value>
            <value>
                <fullName>3/4 in</fullName>
            </value>
            <value>
                <fullName>1 in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>