unpackaged/main/default/objects/ProductAttribute/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1200 Watts</fullName>
            </value>
            <value>
                <fullName>1600 Watts</fullName>
            </value>
            <value>
                <fullName>26800 mAh (99 Wh)</fullName>
            </value>
            <value>
                <fullName>19200 mAh (71.04 Wh)</fullName>
            </value>
            <value>
                <fullName>10200 mAh (37.74 Wh)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>