unpackaged/main/default/objects/ProductAttribute/fields/Warranty_Options__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Options__c</fullName>
    <label>Warranty Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>10 Years</fullName>
            </value>
            <value>
                <fullName>15 Years</fullName>
            </value>
            <value>
                <fullName>25 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>